# os_unix_brownian_server_bot

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  runme.sh
client/: main.c
common/: config_reading.c  config_reading.h  logger.c  logger.h
server/: logger.c  logger.h  main.c
